@@ -1,3 +1,8 @@
+2012-11-17 belangeo <belangeo@gmail.com>
+
+    * Added new object: Atone: First-order recursive high-pass filter with variable frequency response.
+    - rev 1031
+
 2012-11-15 belangeo <belangeo@gmail.com>
 
     * Added new object: SuperSaw: Roland JP-8000 Supersaw emulator.
